# transparent-background-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  TROUBLESHOOTING.md  mcp_config_dev.json  mcp_config_example.json  pyproject.toml  pytest.ini  requirements.txt  simple_test.py  test_all_models.py  test_ben2.py  test_image_base64.txt  test_image_loading.py  test_lazy_loading.py  test_mcp_integration.py
.github/workflows/: test.yml
examples/: basic_usage.py
scripts/: test_installation.py  update_dev_config.py
src/transparent_background_mcp/: __init__.py  server.py
src/transparent_background_mcp/utils/: __init__.py  dependency_manager.py  hardware.py  image_utils.py  model_manager.py
tests/: __init__.py  test_hardware.py  test_image_utils.py  test_imports_smoke.py  test_model_manager.py
